CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SVRBenchmarks)

#Define project dependencies
SET(DEPENDENCIES SVRModel OnlineSVR)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

if(WITH_TESTS AND PROJECT_NAME MATCHES "${WITH_TESTS}")
    message("~~ Building ${PROJECT_NAME}")

    
    SET(GBENCH_ROOT gbenchmark)

    INCLUDE_DIRECTORIES(${GBENCH_ROOT}/include)
    link_directories(${GBENCH_ROOT}/build/src)

    FILE(GLOB_RECURSE TEST_SOURCE_FILES "src/*.cpp")
    ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} benchmark)
endif()

