CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SVRBusiness-tests)

#Define project dependencies
SET(DEPENDENCIES SVRPersist SVRBusiness)
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

if(WITH_TESTS AND PROJECT_NAME MATCHES "${WITH_TESTS}")
    MESSAGE("~~ Building ${PROJECT_NAME}")

    SET_PROPERTY(DIRECTORY PROPERTY TEST_MODULES "${PROJECT_NAME}")
    FIND_PACKAGE(GTest REQUIRED)
    FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)

    FILE(GLOB_RECURSE TEST_SOURCE_FILES "test/*.cpp")
    ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} gtest gtest_main pthread ${Boost_LIBRARIES})
endif()

