CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SVRDaemon-blackbox-tests)

#Define project dependencies
SET(DEPENDENCIES SVRPersist SVRBusiness)
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

if(WITH_TESTS AND PROJECT_NAME MATCHES "${WITH_TESTS}")
    message("~~ Building ${PROJECT_NAME}")

    set_property(DIRECTORY PROPERTY TEST_MODULES "${PROJECT_NAME}")
    
    SET(GTEST_ROOT ${CMAKE_SOURCE_DIR}/libs/gtest-1.7.0)

    FIND_PACKAGE(GTest REQUIRED)
    FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
    INCLUDE_DIRECTORIES(${GTEST_ROOT}/include)

    link_directories(${GTEST_ROOT}/lib)

    FILE(GLOB_RECURSE TEST_SOURCE_FILES "test/*.cpp")
    ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} gtest gtest_main pthread ${Boost_LIBRARIES} wavelib)
endif()

