CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SVRDaemon-blackbox-tests)
LINK_DIRECTORIES(/lib /libexec /usr/lib /usr/lib/libexec /usr/local/lib /usr/local/libexec)

#Define project dependencies
SET(DEPENDENCIES SVRPersist SVRBusiness)
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)

INCLUDE(../../cmake/IncludeDependencies.cmake)

if(WITH_TESTS AND PROJECT_NAME MATCHES "${WITH_TESTS}")
    MESSAGE("~~ Building ${PROJECT_NAME}")

    SET_PROPERTY(DIRECTORY PROPERTY TEST_MODULES "${PROJECT_NAME}")
    FIND_PACKAGE(GTest REQUIRED)
    FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
    FILE(GLOB_RECURSE TEST_SOURCE_FILES "test/*.cpp")
    ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCE_FILES})
    TARGET_LINK_LIBRARIES(${PROJECT_NAME} gtest gtest_main ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} pthread ${Boost_LIBRARIES} wavelib)
endif()

