CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(SVRDaemon)

#Define project dependencies
SET(DEPENDENCIES SVRBusiness SVRPersist SVRCommon SVRModel OnlineSVR)
IF(EXPERIMENTAL_FEATURES)
    LINK_DIRECTORIES(${MATLAB_LINK_DIR})
ENDIF(EXPERIMENTAL_FEATURES)


FOREACH(DEP ${DEPENDENCIES})
    INCLUDE_DIRECTORIES(../${DEP}/include)
ENDFOREACH(DEP)

FILE(GLOB SOURCE_FILES src/*.cpp)
IF(IDE STREQUAL "QT_CREATOR")
    FILE(GLOB SOURCE_FILES src/*.cpp include/*.h include/*.hpp)
ENDIF(IDE STREQUAL "QT_CREATOR")
FIND_PACKAGE(Boost ${Boost_MIN_VERSION} COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(include ${Boost_INCLUDE_DIR})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JEMALLOC_LIBRARIES} ${DEPENDENCIES} ${Boost_LIBRARIES})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_PEDANTIC_FLAGS}")
